--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <title>RocketCoffee</title>
 
-    <link rel="stylesheet" href="/Projeto_ThiagoC/estilo.css" />
+    <link rel="stylesheet" href="estilo.css" />
   </head>
 
   <body>
